--- a/Lab 16/ShoppingCartMartinBase/style.css
+++ b/Lab 16/ShoppingCartMartinBase/style.css
@@ -8,10 +8,11 @@ html {
     box-sizing: border-box;
 }
 body {
-    margin: 32px 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
+    padding: 32px;
     gap: 32px;
     background: #202020;
     color: white;
@@ -23,7 +24,24 @@ button {
     font: inherit;
     border-radius: 3px;
 }
-p {
-    width: 500px;
+.wrap {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 16px;
+}
+h1 {
     text-align: center;
+}
+.wrap > div {
+    background: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    color: #202020;
+    gap: 16px;
+    text-align: center;
+}
+img {
+    padding: 16px;
 }
